profiling-using-exp-runner/cpu-dft-remote/experiments/dft_experiment/run_2_repetition_0/energibridge.log
sampling interval: 200, target function: DFT_lru_cache, input size: 1024
  File "<string>", line 1
    import sys; import os; import numpy as np; sys.path.append(/Users/rr/GreenLab/ProjectCode/profiling-using-exp-runner/packages); import cpu.dft as module; X = tuple(np.random.random(1024)); module.DFT_lru_cache(X)
                                                               ^
SyntaxError: invalid syntax
Energy consumption in joules: 7.99873076248169 for 0.2333994 sec of execution.
